# vellum

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package.json  rust-toolchain.toml
.agents/: README.md
.agents/instructions/: hexagonal-boundaries.instructions.md  rust-style.instructions.md  tests.instructions.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  cursor.rs  document.rs  edit_error.rs  event.rs  lang_jinja.rs  language.rs  layout.rs  lib.rs  offset.rs  token.rs
crates/lang-jinja/: Cargo.toml
crates/lang-jinja/src/: lib.rs  tokenizer.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: editor.rs
docs/adr/: 0000-template.md  0001-grapheme-segmentation.md  0002-event-sourced-buffer.md  0003-input-progressive-enhancement.md  0004-measurement-port-and-arithmetic-layout.md  0005-repo-packaging.md  0006-rope-buffer.md  0007-lang-jinja-crate.md  0008-cursor-in-document-aggregate.md  0009-generic-highlight-vocabulary.md
docs/audits/: 2026-06-19-increment-1-engine-audit.md  2026-06-22-phase-i-view-audit.md
docs/plans/: 2026-06-15-vellum-design.md  2026-06-15-vellum-increment-0.md  2026-06-15-vellum-increment-1.md  HANDOFF-2026-06-15.md  HANDOFF-2026-06-19.md  HANDOFF-2026-06-22-phase-i-complete.md  HANDOFF-2026-06-22.md
scripts/: build-wasm.sh
ts/demo/: index.html  package.json  vite.config.ts
ts/demo/src/: main.ts
ts/view/: package.json  tsconfig.json
ts/view/src/: diff.test.ts  diff.ts  highlight-names.test.ts  highlight-names.ts  highlight-styles.css  highlights.test.ts  highlights.ts  index.ts  keyboard.test.ts  keyboard.ts  measure.test.ts  measure.ts  view.ts
ts/view/src/input/: create-input-source.ts  edit-context-input.ts  fake-input.ts  hidden-textarea-input.ts  input-source.ts  input.test.ts
