[workspace]
resolver = "2"
members = ["crates/core", "crates/wasm"]

[workspace.package]
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/akaisys/vellum"
authors = ["Akaisys"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
