[workspace]
resolver = "2"
members = ["crates/core", "crates/lang-jinja", "crates/wasm"]

[workspace.package]
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
# The public GitHub mirror (matches the `github` git remote). The Akaisys vs
# TensegrityAI public identity is reconciled at the OSS flip (ADR-0005, Phase J).
repository = "https://github.com/TensegrityAI/vellum"
authors = ["Akaisys"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

# `wasm-pack build` ships the release profile to the browser. Enabling
# overflow-checks there means an adversarial `at + removed.len()` in `event.rs`
# PANICS on wraparound (per its documented contract, which H1 converts to a
# Result at the wasm boundary) instead of silently wrapping in the shipped WASM.
[profile.release]
overflow-checks = true
